# top-neel-scholars

./: .gitignore  README.md  looper.py  monitor.sh  pyproject.toml  run.py
monitor/: pane_files.sh  pane_log.sh  pane_status.sh  pane_timeline.sh  parse_log.py
prompts/: CLAUDE.md  continue_with_feedback.md  feedback.md  feedback_agent_preamble.md  worker_preamble.md
setup/: make_user_on_vm.sh
src/: __init__.py  log.py  loop.py  parse.py  process.py  rate_monitor.py  status.py
tests/: test_integration.py  test_rate_monitor.py
