[project]
name = "top-neel-scholars"
version = "0.1.0"
description = "Run Claude Code or Codex in a loop with stuck/limit detection"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
